--- a/Sentiment Demo UI/src/app/components/web-chat/web-chat.component.html
+++ b/Sentiment Demo UI/src/app/components/web-chat/web-chat.component.html
@@ -51,7 +51,9 @@
       <mat-card-content fxFlex fxLayout="column" class="bg-white mb-0 overflow-hidden">
         <div fxFlex class="overflow-auto"  #chatWrapper>
           <app-message *ngFor="let message of messages | sentimentFilter: isTwitch" [message]="message"></app-message> 
+          <app-message *ngFor="let userTyping of usersTyping | keyvalue" [message]="userTyping.value.message!" class="opacity-50"></app-message> 
         </div>
+
   
         <!-- Standard Chat isTyping sentiment indicator -->
         <div *ngIf="!isTwitch && !!usersTyping.size" fxLayout="row" fxLayoutAlign="space-between center" class="mat-caption text-grey my-2 mx-3">
