--- a/Sentiment Demo UI/src/app/components/message-source-dropdown/message-source-dropdown.component.html
+++ b/Sentiment Demo UI/src/app/components/message-source-dropdown/message-source-dropdown.component.html
@@ -15,7 +15,7 @@
     <span class="mat-caption text-uppercase text-muted fw-bold text-truncate">Quix</span>
   </button>
 
-  <cdk-virtual-scroll-viewport *ngIf="!isLoadingChannels" itemSize="100" [style.height.px]="(50 * channels.length) < 250 ? (50 * channels.length) : 250" twitchWrapper>
+  <cdk-virtual-scroll-viewport *ngIf="!isLoadingChannels" itemSize="100" [style.height.px]="(50 * channels.length) < 250 ? (50 * channels.length) : 250">
     <button mat-menu-item fxLayout="row" fxLayoutAlign="start center" class="bg-white px-4 py-2" *ngFor="let channel of channels" [class.selected]="selectedRoom === channel.streamId" (click)="changeRoom(channel.streamId, true)"> 
       <div fxLayoutAlign="center center" class="rounded-circle overflow-hidden me-2" [class._custom-chat-room]="storedRooms.includes(channel.streamId!)">
         <img [src]="channel.profilePic" height="32" *ngIf="channel.profilePic">
